Prevent overflow of URL in variablebox

--- a/packages/pxweb2/src/app/components/NavigationDrawer/Drawers/DrawerSave.module.scss
+++ b/packages/pxweb2/src/app/components/NavigationDrawer/Drawers/DrawerSave.module.scss
@@ -38,3 +38,7 @@
 .buttonWrapper > button {
   width: 100%;
 }
+
+.copyText {
+  overflow-wrap: anywhere;
+}
